# eddie

./: .gitignore  BUGS  CHANGELOG  INSTALL  Makefile.in  README  README.NT  README.md  RELEASE_NOTES  aclocal.m4  config.h.in  config.status  configure  configure.erl.in  configure.in  eddie.mk.in  eddie_rootdir.erl  vsn.mk
conf/: basic_gateway.gate  basic_migration.mig  ex1.gate  ex1.mig  ex2.gate  ex2.mig  ex3.gate  ex3.mig  ex4.gate  ex4.mig
conf/conf/: httpd.conf
dns_server/releases/: RELEASES  erl_dns  erl_dns.OLD  named  start  start.P1A  start.P1B  start.test_rel  start_erl.data  start_erl.data.OLD  start_erl.data.P1B  start_erl.data.test_rel
dns_server/releases/P1A/: dns.rel  start.boot  sys.config
dns_server/releases/P1A.OLD/: dns.rel  sys.config
dns_server/releases/P1B/: dns.script  sys.config
dns_server/releases/R3B02/: start.script  start_all_example.rel  start_clean.boot  start_clean.rel  start_sasl.boot  start_sasl.rel  start_sasl.script
dns_server/releases/test_rel/: start.boot  start.script  sys.config
dns_server/src/: Makefile  TODO  dns.config  dns.hrl  dns_app.erl  dns_cache.erl  dns_catalog.erl  dns_domain_sup.erl  dns_load.erl  dns_parse.erl  dns_query.erl  dns_recurse.erl  dns_recurse_udp_tracker.erl  dns_rr.erl  dns_server.app.src  dns_server.erl  dns_sig.erl  dns_sup.erl  dns_tcp_accept.erl  dns_udp.erl  dns_xfr.erl  dns_zone.erl
dns_server/system/: Install.src  Makefile  Makefile.dist  dns.rel.src  erl.mk.dist  make.erl  start.src  start_erl  start_erl.data.src  sys.config.src  system.mk
dns_server/system/examples/: 127.in-addr.arpa  128.20.173.in-addr.arpa  README  foobarcorp.com.au  lb_dns.boot
dns_server/test/: named.boot  test.erl
dns_server/test/domain/: 127.in-addr.arpa  14.236.150.in-addr.arpa  15.236.150.in-addr.arpa  20.236.150.in-addr.arpa  21.236.150.in-addr.arpa  aa.bb.cc.dd  cache  includes
doc/: README
doc/common/: eddie.1  header_c.txt  header_erl.txt
doc/dns/: AUTHORS  INSTALL  README
doc/eddie/: AUTHORS  INSTALL  README
ecmd/: Makefile  ecmd.c
erfs/: Makefile
erfs/doc/: EXAMPLES  README  TODO
erfs/src/: Makefile  erfs.app.src  erfs.erl  erfs.hrl  erfs_add_erfs.erl  erfs_add_node.erl  erfs_app.erl  erfs_check_in.erl  erfs_check_out.erl  erfs_db.erl  erfs_delete.erl  erfs_delete_erfs.erl  erfs_delete_fs.erl  erfs_delete_node.erl  erfs_file.erl  erfs_init_fs.erl  erfs_reset.erl  erfs_status.erl  erfs_sup.erl  erfs_utils.erl
inet_server/: Makefile
inet_server/c_src/: Makefile  backend.c  backend.h  child.c  child.h  control.c  control.h  main.c  main.h  param.c  param.h  parent.c  parent.h  plain_sup.c  sanity_check.c  server.c  server.h
inet_server/doc/: inet_server.aw
inet_server/src/: Makefile  erlet.hrl  erlet_admit_ctrl.erl  erlet_status.erl  erlet_utils.erl  http.erl  http.hrl  http_admit.erl  http_db.erl  http_fields.erl  http_parse.erl  http_proxy.erl  inet_app.erl  inet_server.app.src  inet_server.erl  inet_server.hrl  is_config.erl  is_core.erl  is_db.erl  is_service_db.erl  is_sup.erl  queue_srv.erl  queue_timer.erl  srv_parse.erl  srv_parse.hrl  srv_table.erl  url_parse.erl
load_info/: Makefile
load_info/c_src/: Makefile  NTLoadCounter.c  load_avg.c
load_info/src/: Makefile  load_app.erl  load_avg.c.FreeBSD  load_info.app.src  load_server.erl  load_server.hrl  load_sup.erl  lonelb.erl
logger/: Makefile
logger/src/: Makefile  logger.app.src  logger.erl  sys_logger.erl
lonelb/src/: Makefile  get_mig_conf.erl  lonelb.app.src  lonelb.erl
master/src/: Makefile  master.app.src  master_app.erl  master_heuristics.erl  master_server.erl  master_sup.erl
misc/: Makefile  Makefile.dist
misc/c_src/: Makefile  Makefile.dist  eddie_sig.c  fdsrv.c  fdsrv_drv.c  syslog_drv.c
misc/include/: eddie_sig.hrl  ip.hrl  logger.hrl
misc/src/: Makefile  config_file.erl  db.erl  disk_log_handler.erl  fdsrv.erl  log_sig.erl  misc.app.src  misc.erl  misc_app.erl  misc_sup.erl  nt.misc.app.src  sig_ex.erl  sig_handler.erl  syslog_handler.erl
misc/test/: test.conf  test.erl
oam/: Makefile
oam/src/: Makefile  blocked.html  conf.src  eddie.init.src  eddie.src  gate.src  lbdns.init.src  mig.src  oam.app.src  oam.erl  oam_config.erl  oam_config_files.erl  package.src  queue.html  reject.html  rpm.spec  rpm.spec.src  start.src
oam/src/eddie/: Makefile  Makefile.tmpl
oam/src/eddie/files/: md5
oam/src/eddie/pkg/: COMMENT  DESCR
oam/src/solaris/: INSTALL.solaris  README.NOW  build.and.pkg.eddie.on.sun.txt  build.and.pkg.erlang49.on.sun.txt  build.scripts.txt  eddie-build-and-pkg.sh  eddie-depend  eddie-pkginfo  eddie-postinstall  eddie-request  eddie.init.solaris.src  eddie.setboot  lbdns.setboot  reference.websites.txt
servant/: Makefile
servant/examples/: Makefile  Makefile.dist  dummy.erl  eddie.erl  http_monitor.erl  http_monitor.sh  notify.sh  start_httpd.c  start_httpd.sh  stop_httpd.c  stop_httpd.sh
servant/examples/httpd-1.3.x/conf/: access.conf  httpd.conf  srm.conf
servant/examples/httpd/conf/: access.conf  httpd.conf  srm.conf
servant/include/: db.hrl
servant/src/: Makefile  err.c  err.h  garp.c  garp.h  get_mig_conf.erl  ifadd.c  ifdel.c  ifget.c  ifget.h  ints.h  memfs.h  rights.c  rights.h  routeadd.c  servant.app.src  servant_app.erl  servant_config.erl  servant_inet_server_sup.erl  servant_monitor_server.erl  servant_monitor_sup.erl  servant_server.erl  servant_sup.erl  servant_util.erl  strs.h
servant/test/: .erlang  Makefile  dummy_config.sh  eddie.config  poll  script.erl  start  start.rel
skeletons/: c.skel  gen_event.skel  gen_server.skel  makefile.skel  plain.skel
sync_nodes/src/: Makefile  sync_nodes.app.src  sync_nodes_app.erl  sync_nodes_server.erl  sync_nodes_sup.erl
system/: Install.src  Makefile  Makefile.dist  eddie.rel.src  eddie_clean.rel.src  loadinfo.rel.src  make.erl  mk_dot_erlang.sh  nt.sys.config.src  start_erl.data.src  sys.config.src  system.mk
